// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-accordion-group/enabled All Children Disabled 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-label="Afficher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-label="Afficher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-label="Afficher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/enabled All Children Enabled 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-disabled="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-disabled="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-disabled="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/enabled All Children Mixed 1`] = `
<article
  class="m-accordion-group"
>
  <header
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout ouvrir
                
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            
                    Tout fermer
                
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </header>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-disabled="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-label="Afficher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-accordion m--is-default m--is-closed m--is-disabled m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-disabled="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
        />
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;
